# aoi

./: Cargo.toml  Dockerfile  LICENSE  README.md  flake.nix  fly.toml
src/: lib.rs  main.rs  playing.rs  render.rs  template.rs
templates/: font.html  widget.html
